--- a/src/app/listado-actores/listado-actores.component.scss
+++ b/src/app/listado-actores/listado-actores.component.scss
@@ -1,3 +1,17 @@
-table {
-    width: 100%;
+mat-card{
+    width: 300px;
+}
+img{
+    width: 80px;
+    height: 100px;
+    margin: auto;
+}
+
+mat-card{
+    margin: auto;
+    width: 80%;
+    margin-top: 10px;
+}
+mat-card-actions{
+    margin: auto;
 }
