Parte tres terminada

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -298,4 +298,4 @@
   }
 </style>
 <router-outlet></router-outlet>
-<app-listado-actores></app-listado-actores>
+<!--<app-listado-actores></app-listado-actores>-->
