--- a/src/app/listado-actores/listado-actores.component.html
+++ b/src/app/listado-actores/listado-actores.component.html
@@ -25,7 +25,7 @@
       
     </mat-card-content>
     <mat-card-actions>
-      <button mat-button>LIKE</button>
+      <button mat-button [routerLink]="['/detalles', actor.id]">Detalles</button>
       <button mat-button>SHARE</button>
     </mat-card-actions>
   </mat-card>
